--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "protractor-install": "npm install protractor && ./node_modules/protractor/bin/webdriver-manager update",
     "protractor-tests": "./node_modules/protractor/bin/protractor config/protractor-config.js",
-    "protractor-sauce-tests": "./node_modules/protractor/bin/protractor config/protractor-sauce-config.js"
+    "protractor-sauce-tests": "./node_modules/protractor/bin/protractor config/protractor-sauce-config.js",
+    "protractor-browserstack-tests": "./node_modules/protractor/bin/protractor config/protractor-browserstack-config.js"
   },
   "devDependencies": {
     "protractor-html-screenshot-reporter": "0.0.20"
