--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
   "name": "sampleLoanTests",
+  "version": "1.0.0",
+  "description": "sample loan tests",
   "scripts": {
     "protractor-install": "npm install protractor && ./node_modules/protractor/bin/webdriver-manager update",
     "protractor-tests": "./node_modules/protractor/bin/protractor config/protractor-config.js",
     "protractor-sauce-tests": "./node_modules/protractor/bin/protractor config/protractor-sauce-config.js",
     "protractor-browserstack-tests": "./node_modules/protractor/bin/protractor config/protractor-browserstack-config.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/meaghanlewis/sampleLoanTests.git"
   },
   "devDependencies": {
     "protractor-html-screenshot-reporter": "0.0.20"
