add submodule to circle file

--- a/circle.yml
+++ b/circle.yml
@@ -12,3 +12,8 @@ database:
 test:
   override:
     - npm run protractor-tests
+
+checkout:
+  post:
+    - git submodule sync
+    - git submodule update --init
