--- a/circle.yml
+++ b/circle.yml
@@ -17,3 +17,25 @@ checkout:
   post:
     - git submodule sync
     - git submodule update --init
+
+machine:
+  java:
+    version: openjdk8
+    
+dependencies:
+  post:
+    - wget https://saucelabs.com/downloads/sc-latest-linux.tar.gz
+    - tar -xzf sc-latest-linux.tar.gz
+
+test:
+  override:
+    - cd sc-*-linux && ./bin/sc -u $SAUCE_USERNAME -k $SAUCE_ACCESS_KEY -f ~/sc_ready:
+        background: true
+    # Wait for tunnel to be ready
+    - while [ ! -e ~/sc_ready ]; do sleep 1; done
+
+    # Clean and build the project
+    - mvn clean
+
+    # Run selenium tests
+    - mvn -Dtest=SmokeTestSuite test
